# ml-mobileclip

./: .gitignore  AGENTS.md  CLAUDE.md  ExampleFloatArray.kt  HOW_TO.md  analyze_models.py  export_fp16_onnx.py  export_int8_bnb_onnx.py  export_int8_onnx.py  export_litert.py  export_mobile_onnx.py  export_model.sh  export_optimized_android.py  export_static_int8_onnx.py  export_to_litert.ipynb  export_true_int8_onnx.py  gen_random_sentences.py  getting_started.ipynb  onnx_export_2026-04-12_22-52-53-243899_success.md  onnx_export_2026-04-12_22-52-59-554193_success.md  onnxruntime_profile__2026-05-24_20-12-35.json  pyproject.toml  test_bnb_reconstruct.py  test_int8_export.py  test_int8_onnx.py  test_mobileclip_onnx.ipynb  test_mobileclip_onnx.py  test_mobileclip_original.py
mobileclip2/: mobileclip2.py
