[project]
name = "ml-mobileclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.49.2",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "timm>=1.0.26",
    "torchvision>=0.26.0",
    "wonderwords>=3.0.1",
]
