[project]
name = "ml-mobileclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "litert-torch>=0.9.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "timm>=1.0.26",
    "torchvision>=0.26.0",
    "wonderwords>=3.0.1",
    "clip-benchmark>=1.4.0",
    "datasets>=2.21.0",
    "open-clip-torch>=2.20.0",
]
